--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,62 +1,32 @@
 # This is an example Hyprland config file. Refer to the wiki for more information. https://wiki.hyprland.org/Configuring/
 
-# Please note not all available settings / options are set here. For a full list, see the wiki
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
 # Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
-$menu = pkill wofi || wofi -Id --show drun --no-actions
-
 source = ~/.cache/wal/colors-hyprland.conf
-source = ~/.config/hypr/hotkeys.conf
-source = ~/.config/hypr/windowrules.conf
-source = ~/.config/hypr/startup.conf
-source = ~/.config/hypr/monitors.conf
 
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
+source = ~/.config/hypr/modules/input.conf
+source = ~/.config/hypr/modules/windowrules.conf
+source = ~/.config/hypr/modules/permissions.conf
+source = ~/.config/hypr/modules/monitors.conf
+source = ~/.config/hypr/modules/autostart.conf
+
+source = ~/.config/hypr/generated_by_scripts/workspaces_per_monitor.conf
+
+source = ~/.config/hypr/hotkeys/core.conf
+source = ~/.config/hypr/hotkeys/resize.conf
+source = ~/.config/hypr/hotkeys/applications.conf
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-env = LIBVA_DRIVER_NAME,nvidia
 env = NVD_BACKEND,direct
-env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+env = __GL_VRR_ALLOWED,0
+env = __GL_GSYNC_ALLOWED,0
+env = QT_QPA_PLATFORM,wayland;xcb
+env = LIBVA_DRIVER_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = XDG_MENU_PREFIX,plasma-
 
-###################
-### PERMISSIONS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Permissions/
-
-permission = .*/firefox, screencopy, allow
-permission = .*/zoom, screencopy, allow
-permission = .*/zoom-us, screencopy, allow
-
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
-general {
+general { # https://wiki.hyprland.org/Configuring/Variables/#general
   gaps_in = 6
   gaps_out = 17
 
@@ -75,8 +45,7 @@ general {
   layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
+decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
   rounding = 4
   rounding_power = 2
 
@@ -95,8 +64,8 @@ decoration {
     color = rgba(1a1a1aee)
   }
 
-  # https://wiki.hyprland.org/Configuring/Variables/#blur
-  blur {
+
+  blur { # https://wiki.hyprland.org/Configuring/Variables/#blur
     enabled = true
     size = 10
     passes = 3
@@ -104,17 +73,14 @@ decoration {
     new_optimizations = true
     special = true
     popups = true
-
     # vibrancy = 0.1696
   }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-animations {
+animations { # https://wiki.hyprland.org/Configuring/Variables/#animations
   enabled = yes, please :)
 
   # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
   bezier = easeOutQuint,0.23,1,0.32,1
   bezier = easeInOutCubic,0.65,0.05,0.36,1
   bezier = linear,0,0,1,1
@@ -139,81 +105,23 @@ animations {
   animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[1]
-# windowrule = rounding 0, floating:0, onworkspace:w[2]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-layerrule = dimaround, wofi
-# workspace = 1, floating:1
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
+dwindle { # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
   pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
   preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
+master { # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
   new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-  force_default_wallpaper = -1
+misc { # https://wiki.hyprland.org/Configuring/Variables/#misc
+  # force_default_wallpaper = -1
   disable_hyprland_logo = true
-  vfr = true
-  vrr = 2
-
   mouse_move_enables_dpms = true
+  vfr = true
+  # vrr = 2
+  vrr = 0
 }
-
-#############
-### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-  follow_mouse = 0
-
-  kb_layout = us,ru
-  kb_variant =
-  kb_model =
-  kb_options = ctrl:swapcaps, ,grp:ctrl_space_toggle
-  kb_rules =
-
-  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-  touchpad {
-    natural_scroll = false
-  }
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-
-device {
-  name = epic-mouse-v1
-  sensitivity = -0.5
-}
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 opengl {
  nvidia_anti_flicker = true
@@ -221,5 +129,5 @@ opengl {
 
 xwayland {
   enabled = true
-  # force_zero_scaling = true
+  force_zero_scaling = true
 }
