current state of art

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -9,13 +9,14 @@ set -g status-position top
 set -g aggressive-resize off
 
 unbind C-b
-set -g prefix M-j
+set -g prefix C-Space
+bind C-Space send-prefix
 
 set -g mouse on
 
 set-window-option -g mode-keys vi
 
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 
 # Splits in the same directory
 bind c new-window -c "#{pane_current_path}"
@@ -23,6 +24,7 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 bind -r ^ last-window
+bind-key q kill-pane
 
 # bind -n C-h select-pane -L
 # bind -n C-j select-pane -D
@@ -30,17 +32,22 @@ bind -r ^ last-window
 # bind -n C-l select-pane -R
 
 source-file ~/.config/tmux/smart_pane_switching.conf
+source-file ~/.cache/wal/colors-tmux.conf
 
-bind-key -r -T prefix f new-window -n sessionizer "~/.config/scripts/tmux_sessionizer"
+bind-key -r -T prefix f new-window -n sessionizer "~/.config/scripts/tmux-sessionizer"
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+# bind -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 set -g status-right '#(git -C "#{pane_current_path}" branch --show-current 2>/dev/null | sed "s/.*/  & /")'
 
 set -g status-interval 5
 
-# Rice
-set -g status-style "bg=black,fg=colour245"
-set -g window-status-current-style "bg=black,fg=white,bold"
+set -g status-position top
+set -g status-style "fg=black,bg=colour252"
+set -g window-status-style "fg=black bg=colour252, bold"
+set -g window-status-current-style "fg=black,bg=colour255,bold"
+set -g pane-border-style "fg=colour246"
+set -g pane-active-border-style "fg=colour240"
