--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -9,13 +9,12 @@
     "margin": "9px 18px 0 18px",
     "modules-left": [
       "custom/logo",
-      "custom/weather",
+      "hyprland/workspaces#main",
+      // "custom/weather",
       // "hyprland/workspaces#app_tray",
       "hyprland/submap"
     ],
-    "modules-center": [
-      "hyprland/workspaces#main"
-    ],
+    "modules-center": [ ],
     "modules-right": [
       "tray",
       "temperature",
@@ -25,10 +24,11 @@
       "hyprland/language",
       "custom/date_neuro",
       "custom/date_month",
-      "custom/date_time",
+      "custom/date_time"
     ],
     "include": [
-      "~/.config/waybar/modules.jsonc"
+      "~/.config/waybar/modules.jsonc",
+      "~/.config/waybar/generated_by_scripts/hyprland_workspaces.jsonc"
     ]
   },
   {
@@ -41,13 +41,12 @@
     "margin": "9px 18px 0 18px",
     "modules-left": [
       "custom/logo",
-      "custom/weather",
-      "hyprland/workspaces#app_tray",
+      "hyprland/workspaces#main",
+      // "custom/weather",
+      // "hyprland/workspaces#app_tray",
       "hyprland/submap"
     ],
-    "modules-center": [
-      "hyprland/workspaces#main"
-    ],
+    "modules-center": [ ],
     "modules-right": [
       "tray",
       "temperature",
@@ -57,10 +56,11 @@
       "hyprland/language",
       "custom/date_neuro",
       "custom/date_month",
-      "custom/date_time",
+      "custom/date_time"
     ],
     "include": [
-      "~/.config/waybar/modules.jsonc"
+      "~/.config/waybar/modules.jsonc",
+      "~/.config/waybar/generated_by_scripts/hyprland_workspaces.jsonc"
     ]
   }
 ]
