waybar add weather and improve scrypts, split hyprland

--- a/config/hypr/modules/input.conf
+++ b/config/hypr/modules/input.conf
@@ -6,7 +6,7 @@ input {
 
   kb_model   = apple
   kb_layout  = us,ru
-  kb_options = grp:win_space_toggle
+  kb_options = grp:win_space_toggle,ctrl:nocaps
   # kb_variant =
   # kb_model =
   # kb_rules =
