--- a/config/hypr/modules/autostart.conf
+++ b/config/hypr/modules/autostart.conf
@@ -1,26 +1,28 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = hyprctl setcursor "$XCURSOR_THEME" "$XCURSOR_SIZE"
 # exec-once = systemctl --user start hyprpolkitagent
 
+# Services
 exec-once = pkill -x swww-daemon; swww-daemon & disown
 exec-once = kanshi reload
 exec-once = hypridle
+exec-once = $HOME/.config/waybar/live-reload
 
-exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/tmux-spawn-nix-session"
-exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/waybar/live-reload"
-exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/connect-bluetooth 80:99:E7:E0:4B:A5 Sony XM6"
-# exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/mount-drives"
+# Scripts
+exec-once = $HOME/.config/scripts/tmux-spawn-nix-session
+exec-once = $HOME/.config/scripts/tmux-spawn-local-session
+# exec-once = $HOME/.config/waybar/live-reload
 
-exec-once = if [ "$TMUX" = "" ]; then tmux new -s local && tmux tmux-detach; fi
+exec-once = uwsm app -- $HOME/.config/scripts/connect-xm6
 
+# exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/connect-bluetooth 80:99:E7:E0:4B:A5 Sony XM6"
+
+# Applications
 exec-once = [workspace 1 silent] firefox -P default
 exec-once = [workspace 2 silent] kitty -e tmux attach-session -t local
 exec-once = [workspace 3 silent] obsidian
 # exec-once = [workspace 4 silent] thunderbird
-
 # exec-once = [workspace 8 silent] pavucontrol
 # exec-once = [workspace 8 silent] blueman-manager
-
-exec-once = [workspace 10 silent] firefox -P media
+exec-once = [workspace 10 silent] uwsm app -- firefox -P media
