--- a/home/.config/gtk-3.0/settings.ini
+++ b/home/.config/gtk-3.0/settings.ini
@@ -1,3 +1,3 @@
 [Settings]
-gtk-font-name=AtkynsonMono Nerd Font Propo
-gtk-application-prefer-dark-theme=1
+; gtk-icon-theme-name=Papirus
+gtk-icon-theme-name=Colloid
