--- a/home/.config/gtk-4.0/settings.ini
+++ b/home/.config/gtk-4.0/settings.ini
@@ -1,3 +1,4 @@
 [Settings]
-gtk-font-name=AtkynsonMono Nerd Font Propo 11
-gtk-application-prefer-dark-theme=1
+; gtk-icon-theme-name=Papirus
+gtk-icon-theme-name=Colloid
+
