--- a/home/.config/hypr/hotkeys/applications.conf
+++ b/home/.config/hypr/hotkeys/applications.conf
@@ -1,8 +1,12 @@
 bind = SUPER, Return, exec, wezterm
 bind = SUPER, S,            exec, hyprshot -zm region -o $HOME/Pictures/screenshots
 bind = SUPER, E,            exec, dolphin
-bind = SUPER, D,            exec, $HOME/.config/scripts/wofi
+# bind = SUPER, D,            exec, $HOME/.config/scripts/wofi
 bind = SUPER, I,            exec, $HOME/.config/scripts/wallpaper
+bind = SUPER, SPACE, exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
+
+bind = SUPER, D, exec, "$HOME/.config/scripts/menu/launcher-applications"
+bind = SUPER, P, exec, "$HOME/.config/scripts/menu/launcher-menu"
 
 # https://wiki.hypr.land/Useful-Utilities/Systemd-start/
 bind = SUPER, backslash,    exec, uwsm app -- $HOME/.config/scripts/connect-xm6
