--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -20,7 +20,8 @@ exec-once = uwsm app -- $HOME/.config/scripts/connect-xm6
 
 # Applications
 exec-once = [workspace 1 silent] firefox -P default
-exec-once = [workspace 2 silent] kitty -e tmux attach-session -t local
+# exec-once = [workspace 2 silent] kitty --class main -e tmux attach-session -t local
+exec-once = [workspace 2 silent] kitty --class main zsh -ic 'tmux attach-session -t local || tmux new -s local; exec zsh'
 exec-once = [workspace 3 silent] obsidian
 # exec-once = [workspace 4 silent] thunderbird
 # exec-once = [workspace 8 silent] pavucontrol
