--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -73,3 +73,8 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 # windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrulev2 = float, class:^(launcher)$
+windowrulev2 = size 800 500, class:^(launcher)$
+windowrulev2 = center, class:^(launcher)$
+
