--- a/home/.config/waybar/modules.jsonc
+++ b/home/.config/waybar/modules.jsonc
@@ -10,6 +10,13 @@
     "on-click": "hyprctl dispatch submap reset"
   },
 
+  "custom/surf": {
+    "exec": "pkill wofi; ~/.config/scripts/weather/surf",
+    "format": "{text}",
+    "tooltip": false,
+    "interval": 3600
+  },
+
   // displays active apps for given workspace
   "hyprland/workspaces#app_tray": {
     // "all-outputs": false,
@@ -102,7 +109,6 @@
 
   // "language-big": {
   //   "exec": "",
-  //   "on-click": "$HOME/.config/scripts/switch-layout",
   //   "justify": "center",
   //   "format": "{short}"
   // },
@@ -136,6 +142,39 @@
     "on-click": "pkill -RTMIN+5 waybar"
   },
 
+  "custom/openvpn": {
+    "exec": "~/.config/scripts/waybar/openvpn-status",
+    "interval": 1,
+    "format": "{text}",
+    "tooltip": false,
+  },
+
+  "custom/veracrypt": {
+    "exec": "~/.config/scripts/waybar/veracrypt-status",
+    "interval": 10,
+    "format": "{text}",
+    "tooltip": false,
+    "onclick": "veracrypt --text --dismount",
+  },
+
+  "custom/podman": {
+    "exec": "~/.config/scripts/waybar/podman-status",
+    "return-type": "json",
+    "interval": 10,
+    "format": "{text}",
+    "tooltip": true,
+  },
+
+  "custom/language": {
+    "exec": "~/.config/scripts/waybar/current-langauge",
+    // "interval": 1,
+    "format": "{text}",
+    "tooltip": false,
+    "signal": 6,
+    "interval": 1,
+    "on-click": "$HOME/.config/scripts/switch-layout"
+  },
+
   "custom/weather-eink": {
     "exec": "~/.config/scripts/waybar/weather-forecast waybar eink",
     "return-type": "json",
@@ -143,8 +182,6 @@
     "format": "{text}",
     "tooltip": true,
     "markup": "pango",
-    "signal": 5,
-    "on-click": "pkill -RTMIN+5 waybar"
   },
 
 
@@ -179,6 +216,7 @@
 
   "temperature": {
     "thermal-zone": 1,
+    "interval": 1,
     "format": " {temperatureC}°C",
     "critical-threshold": 70,
     "format-critical": " {temperatureC}°C",
@@ -226,15 +264,15 @@
       "car": "",
       "default": ["", "", ""]
     }
-  }
+  },
 
-  // "group/system": {
-  //   "orientation": "horizontal",
-  //   "drawer": {
-  //     "transition-duration": 500,
-  //     "children-class": "hidden",
-  //     "transition-left-to-right": false
-  //   },
-  //   "modules": ["temperature", "disk", "memory", "cpu"]
-  // }
+  "group/status": {
+    "orientation": "horizontal",
+    "modules": [
+      "custom/podman",
+      "custom/openvpn",
+      "custom/veracrypt",
+      "temperature",
+    ]
+  }
 }
