--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -4,25 +4,39 @@
 # exec-once = systemctl --user start hyprpolkitagent
 
 # Services
+exec-once = dunst
+exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
 exec-once = pkill -x swww-daemon; swww-daemon & disown
+exec-once = kbuildsycoca6 # dolphin file association
 exec-once = kanshi reload
 exec-once = hypridle
+exec-once = $HOME/.config/scripts/mount-drives
 exec-once = $HOME/.config/waybar/live-reload
 
+# https://wiki.hypr.land/Useful-Utilities/Clipboard-Managers/
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+
 # Scripts
-exec-once = $HOME/.config/scripts/tmux-spawn-nix-session
-exec-once = $HOME/.config/scripts/tmux-spawn-local-session
-# exec-once = $HOME/.config/waybar/live-reload
-
-exec-once = uwsm app -- $HOME/.config/scripts/connect-xm6
-
-# exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/connect-bluetooth 80:99:E7:E0:4B:A5 Sony XM6"
+exec-once = $HOME/.local/bin/public/tmux/nix-session
+exec-once = $HOME/.local/bin/public/kitty-background-listener
+exec-once = $HOME/.local/bin/public/tmux/local-session
+exec-once = $HOME/.local/bin/public/tmux/obsidian-session
+exec-once = $HOME/.local/bin/public/tmux/todo-session
+exec-once = $HOME/.local/bin/private/tmux/openvpn-session
+# exec-once = uwsm app -- $HOME/.config/scripts/bluetooth-startup-connect
 
 # Applications
 exec-once = [workspace 1 silent] firefox -P default
-# exec-once = [workspace 2 silent] kitty --class main -e tmux attach-session -t local
-exec-once = [workspace 2 silent] kitty --class main zsh -ic 'tmux attach-session -t local || tmux new -s local; exec zsh'
-exec-once = [workspace 3 silent] obsidian
+
+# echo $ZDOTDIR
+# echo $ZDOTDIR/.zshrc
+# if not zsh env ~/.config/zsh/zshrc is not loaded
+exec-once = [workspace 2 silent] kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
+exec-once = [workspace 3 silent] kitty --class obsidian zsh -lic 'tmux attach-session -t obsidian; exec zsh'
+exec-once = [workspace 4 silent] kitty --class obsidian zsh -lic 'tmux attach-session -t todo; exec zsh'
+exec-once = [workspace 5 silent] uwsm app -- dolphin
+
 # exec-once = [workspace 4 silent] thunderbird
 # exec-once = [workspace 8 silent] pavucontrol
 # exec-once = [workspace 8 silent] blueman-manager
