--- a/home/.config/hypr/modules/input.conf
+++ b/home/.config/hypr/modules/input.conf
@@ -2,7 +2,7 @@
 
 input {
   follow_mouse = 1
-	# resolve_binds_by_sym = 1
+	resolve_binds_by_sym = true
 
   kb_model   = apple
   kb_layout  = us,ru
