--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -1,3 +1,11 @@
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+# NOTE: hyprctl clients -j | jq '.[] | {title, class}'
+
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
@@ -7,22 +15,7 @@
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-layerrule = dimaround, wofi
-# workspace = 1, floating:1
-
-# fetch all opened windows
-# hyprctl clients -j | jq '.[] | {title, class}'
-
-# windowrulev2 = float,        workspace:1
-# windowrulev2 = size 70% 85%, workspace:1
-# windowrulev2 = center,       workspace:1
-#
-# windowrulev2 = float,        workspace:2
-# windowrulev2 = size 70% 85%, workspace:2
-# windowrulev2 = center,       workspace:2
-
-# windowrulev2 = workspace 1, title:^(FirefoxDefaultProfile)$
-# windowrulev2 = workspace 10, title:^(FirefoxMediaProfile)$
+windowrulev2 = focusonactivate, class:.*
 
 windowrulev2 = tile, workspace:1
 windowrulev2 = tile, workspace:2
@@ -35,46 +28,80 @@ windowrulev2 = tile, workspace:8
 windowrulev2 = tile, workspace:9
 windowrulev2 = tile, workspace:10
 
-# Firefox floating windows
-# windowrulev2 = float, initialClass:^(firefox)$, initialTitle:^(Picture-in-Picture|Library|Downloads|Open File|Save File)$
-# windowrulev2 = float, class:^(firefox)$, title:^(.*Sign in|Log in|Continue with Google).*
-#
-# windowrulev2 = float, class:^(firefox)$, windowtype:^(dialog|popup)$
-# windowrulev2 = center, class:^(firefox)$, windowtype:^(dialog|popup)$
+# NOTE: Delete me if generic rules work
+# windowrulev2 = float, title:(.*Settings.*)
+# windowrulev2 = float, title:(.*Preferences.*)
+# windowrulev2 = float, title:(.*Configure.*)
+# windowrulev2 = float, title:(.*Properties.*)
+# windowrulev2 = float, title:(.*Choose.*)
+
+# Generic
+windowrulev2 = float, title:.*(Configure|Configuration|Settings|Preferences|Options|Properties|Control Panel|Inspector|Toolbox|Customize|Setup|Wizard|Manager|Panel).*
+windowrulev2 = float, title:.*(Open|Open File|Open Folder|Open Directory|Browse|Browse Folder|File Browser|File Chooser|File Picker|Choose File|Choose Folder|Select|Select File|Select Folder|Select Directory|Save|Save As|Save File|Save Image|Save Changes|Export|Export As|Export File|Import|Import As|Import File|Upload|Upload File|File Upload|Download|Download File|Attach|Attachment|Add File|Add Folder|Choose Location|Select Location).*
+windowrulev2 = float, title:.*(Rename|Move|Copy|Delete|Remove|New File|New Folder|Create|Add|Edit|Edit Item|Edit Rule|Edit Profile|Edit Preferences|Find|Find and Replace|Search|Replace|Go To|Jump To|Filter|Sort|Print|Print Preview|Page Setup|Color Picker|Colour Picker|Font|Font Selector|Choose Color|Select Color).*
+windowrulev2 = float, title:.*(Login|Log In|Log On|Sign In|Sign-In|Sign in|Sign-On|Sign On|Sign Up|Sign-Up|Signup|Register|Registration|Create Account|Account Creation|Authentication Required|Re-authentication|Authenticate|Authorization Required|Password|Enter Password|Unlock|Security Key|Two-Factor Authentication|Two Step Verification|2FA|One-Time Password|OTP).*
+windowrulev2 = float, title:.*(Confirm|Confirmation|Are You Sure|Warning|Caution|Error|Critical Error|Information|Info|Notice|Question|Alert|Attention|Success|Completed|Finished|Result|Results).*
+windowrulev2 = float, title:.*(About|About .*|Help|Help Viewer|License|Licensing|Terms of Service|Privacy Policy|Report Bug|Send Feedback|Feedback|Tip of the Day|Welcome|First Run|Initial Setup|Quit|Exit|Close Application|Session Manager|Choose Workspace).*
+windowrulev2 = float, title:.*(Copying|Moving|Deleting|Extracting|Compressing|Decompressing|Archiving|Unarchiving|Packing|Unpacking|Zipping|Unzipping|Downloading|Uploading|Transferring|Syncing|Synchronizing|Indexing|Scanning|Checking|Verifying|Applying Changes|Applying|Preparing|Calculating|Merging|Replacing|Overwriting|Restoring|Recovering|Cleaning Up|Updating|Installing|Uninstalling|Upgrading|Configuring).*
+windowrulev2 = float, title:.*(File Operation Progress|File Transfer|File Copy|File Move|File Delete|File Delete Confirmation|File Operation|File Operations|File Activity|Transfer Progress|Copy Files|Move Files|Delete Files|Extract Files|Compress Files|Archive Manager).*
+windowrulev2 = float, title:.*(File Conflict|Name Conflict|Replace File|Replace Files|Overwrite File|Overwrite Files|Confirm Overwrite|Confirm Replace|Confirm Delete|Confirm Move|Confirm Copy|Skip Files|Keep Both|Keep Newer).*
+windowrulev2 = float, title:.*(Commit Changes|Commit|Push|Pull|Fetch|Merge|Rebase|Resolve Conflicts|Stash Changes|Apply Patch|Create Patch|Diff|Review Changes).*
+windowrulev2 = float, title:.*(Iniciar sessão).*
+windowrulev2 = float, title:.*(Library).*
+windowrulev2 = float, title:.*(Choose Application).*
+windowrulev2 = float, class:.*(m.py).*
+
+# Fix some dragging issues with XWayland
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Ignore maximize requests from apps. You'll probably like this.
+windowrule = suppressevent maximize, class:.*
 
 # Steam dialogs
 windowrulev2 = float, class:^(steam)$, windowtype:^(dialog|popup)$
 windowrulev2 = center, class:^(steam)$, windowtype:^(dialog|popup)$
 windowrulev2 = float, class:^(steam)$, title:^(.*Sign in|Friends List|Chat|Settings|Screenshot Uploader).*
 
-# Add floating
-windowrulev2 = float, center, title:^(Open File|Open|Save|Save As|Export|Import|Choose|Rename), class:^(.*)$
-windowrulev2 = float, center, class:(xdg-desktop-portal-gtk)
-windowrulev2 = float, center, class:(xdg-desktop-portal-hyprland)
-windowrulev2 = float, center, class:(Xdg-desktop-portal-gtk)
-windowrulev2 = float, center, class:(Xdg-desktop-portal-hyprland)
-windowrulev2 = noborder, class:(Xdg-desktop-portal-gtk)
-
-# windowrulev2 = float,  class:^org\.kde\.dolphin$, title:^(Copying|Moving|Deleting|Extracting).*
-# windowrulev2 = center, class:^org\.kde\.dolphin$, title:^(Copying|Moving|Deleting|Extracting).*
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
+# Launcher
 windowrulev2 = float, class:^(launcher)$
-windowrulev2 = size 800 500, class:^(launcher)$
+windowrulev2 = size 400 300, class:^(launcher)$
 windowrulev2 = center, class:^(launcher)$
+windowrulev2 = noborder, class:^(launcher)$
 
+windowrulev2 = float, class:^(qemu)$
+windowrulev2 = size 1200 800, class:^(qemu)$
+
+windowrulev2 = float, class:.*qBittorrent.*
+windowrulev2 = float, class:.*(python3).*
+
+windowrulev2 = float, class:.*(vlc).*
+windowrulev2 = tile, title:(.*VLC media player.*)
+
+# Mega
+windowrulev2 = float, class:.*(mega).*
+windowrulev2 = size 400 600, title:(.*mega*)
+windowrulev2 = size 400 600, title:(.*mega*)
+
+# Firefox
+windowrulev2 = size 400 600, title:(.*Save.*)
+windowrulev2 = size 400 600, title:(.*File Upload.*)
+windowrulev2 = size 400 600, title:(.*Open.*)
+windowrulev2 = float, class:^(firefox)$, modal:1
+windowrulev2 = center, class:^(firefox)$, modal:1
+windowrulev2 = center, class:^(firefox)$, modal:1
+
+# Calculator
+windowrulev2 = float,        title:(.*Calculator.*)
+windowrulev2 = size 400 600, title:(.*Calculator.*)
+
+# Dolphin
+windowrulev2 = center, class:^org\.kde\.dolphin$, title:^(Copying|Moving|Deleting|Extracting).*
+windowrulev2 = size 400 600, title:(.*Choose Application.*)
+
+# Gaming
+windowrulev2 = float,        class:^(google-chrome)$, title:(^X.*p$)
+windowrulev2 = size 272 355, class:^(google-chrome)$, title:(^X.*p$)
+windowrulev2 = pin,          class:^(google-chrome)$, title:(^X.*p$)
+windowrulev2 = center,       class:^(google-chrome)$, title:(^X.*p$)
+windowrulev2 = opacity 0.9 0.6, class:^(google-chrome)$, title:(^X.*p$)
+windowrulev2 = noshadow, class:^(google-chrome)$, title:(^X.*p$)
