--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1,24 +1,21 @@
 # vim:fileencoding=utf-8:ft=conf
-# font_family      "JetBrainsMono Nerd Font Mono"
-# bold_font        "auto"
-# italic_font      "auto"
-# bold_italic_font "auto"
 
-# font_family      JetBrainsMono Nerd Font Mono
-# bold_font        JetBrainsMonoNFM-Bold
-# italic_font      JetBrainsMonoNFM-Italic
-# bold_italic_font JetBrainsMonoNFM-BoldItalic
-
-font_family      JetBrainsMonoNFM-Thin
-bold_font        JetBrainsMonoNFM-Bold
-italic_font      JetBrainsMonoNFM-Italic
-bold_italic_font JetBrainsMonoNFM-BoldItalic
-
-text_composition_strategy legacy
+font_family      Iosevka Nerd Font Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 # adjust_line_height -1
 # adjust_column_height 2
 font_size        10.5
+text_composition_strategy 3.0 0
+# Performance
+repaint_delay 1
+input_delay 1
+
+font_features none
+disable_ligatures never
+
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 # font_size_delta 1
@@ -72,9 +69,6 @@ scrollback_lines 2000
 # handle ANSI escape sequences for colors and text formatting.
 scrollback_pager less +G -R
 
-# When viewing scrollback in a new window, put it in a new tab as well
-scrollback_in_new_tab no
-
 # Wheel scroll multiplier (modify the amount scrolled by the mouse wheel). Use negative
 # numbers to change scroll direction.
 wheel_scroll_multiplier 5.0
@@ -125,21 +119,9 @@ visual_bell_duration 0.0
 # Enable/disable the audio bell. Useful in environments that require silence.
 enable_audio_bell no
 
-# The modifier keys to press when clicking with the mouse on URLs to open the URL
-open_url_modifiers kitty_mod
-
 # The program with which to open URLs that are clicked on. The special value "default" means to
 # use the operating system's default URL handler.
 open_url_with default
-
-# Choose whether to use the system implementation of wcwidth() (used to
-# control how many cells a character is rendered in).  If you use the system
-# implementation, then kitty and any programs running in it will agree. The
-# problem is that system implementations often are based on outdated unicode
-# standards and get the width of many characters, such as emoji, wrong. So if
-# you are using kitty with programs that have their own up-to-date wcwidth()
-# implementation, set this option to no.
-use_system_wcwidth yes
 
 # The value of the TERM environment variable to set
 term xterm-kitty
@@ -287,8 +269,7 @@ map ctrl+shift+f11      toggle_fullscreen
 
 # OS specific tweaks
 
-# Hide the kitty window's title bar on macOS.
-macos_hide_titlebar no
+hide_window_decorations no
 
 # Use the option key as an alt key. With this set to no, kitty will use
 # the macOS native Option+Key = unicode character behavior. This will
@@ -296,18 +277,29 @@ macos_hide_titlebar no
 # can use the macOS unicode input technique.
 macos_option_as_alt yes
 
-# tab_bar_style hidden
 
 background #FFFFFF
 foreground #000000
 
 allow_remote_control yes
-listen_on unix:/tmp/kitty-socket
+listen_on unix:/tmp/kitty
+# listen_on unix:/tmp/kitty-{kitty_pid}
 
+# File opening
 
-# BEGIN_KITTY_FONTS
-font_family      family="JetBrainsMono Nerd Font Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-# END_KITTY_FONTS
+detect_urls yes
+
+# Open directories in Dolphin
+protocol file
+mime inode/directory
+action launch --type=background dolphin $FILE_PATH
+
+# Optional: Open text files in your default editor (e.g., nano/vim/code)
+protocol file
+mime text/*
+action launch --type=overlay $EDITOR $FILE_PATH
+
+# Optional: Open text files in your default editor (e.g., nano/vim/code)
+protocol file
+mime video/*
+action launch --type=overlay mpv $FILE_PATH
