--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",screen-256color*:Tc"
+# set -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",screen-256color*:Tc"
+
+set -g default-terminal "tmux-256color"
 
 set -sg escape-time 0
 set -gq allow-passthrough on
@@ -26,6 +28,17 @@ bind % split-window -h -c "#{pane_current_path}"
 bind -r ^ last-window
 bind-key q kill-pane
 
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
+bind-key -n M-0 select-window -t 10
+
 # bind -n C-h select-pane -L
 # bind -n C-j select-pane -D
 # bind -n C-k select-pane -U
@@ -34,7 +47,7 @@ bind-key q kill-pane
 source-file ~/.config/tmux/smart_pane_switching.conf
 source-file ~/.cache/wal/colors-tmux.conf
 
-bind-key -r -T prefix f new-window -n sessionizer "~/.config/scripts/tmux-sessionizer"
+bind-key -r -T prefix f new-window -n sessionizer "~/.local/bin/public/tmux-sessionizer"
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
