--- a/home/.config/hypr/hotkeys/applications.conf
+++ b/home/.config/hypr/hotkeys/applications.conf
@@ -1,17 +1,15 @@
-bind = SUPER, Return, exec, wezterm
+bind = SUPER, Return, exec, kitty
 bind = SUPER, S,            exec, hyprshot -zm region -o $HOME/Pictures/screenshots
 bind = SUPER, E,            exec, dolphin
-# bind = SUPER, D,            exec, $HOME/.config/scripts/wofi
-bind = SUPER, I,            exec, $HOME/.config/scripts/wallpaper
-bind = SUPER, SPACE, exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
+bind = SUPER, I,            exec, $HOME/.local/bin/public/wallpaper
+bind = SUPER, SPACE,        exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
 
-bind = SUPER, D, exec, "$HOME/.config/scripts/menu/launcher-applications"
-bind = SUPER, P, exec, "$HOME/.config/scripts/menu/launcher-menu"
+bind = SUPER, D, exec, "$HOME/.local/bin/public/menu/launch-kitty" applications
+# bind = SUPER, P, exec, "$HOME/.config/scripts/menu-start"
+bind = SUPER, P, exec, "$HOME/.local/bin/public/menu/launch-kitty"
 
 # https://wiki.hypr.land/Useful-Utilities/Systemd-start/
-bind = SUPER, backslash,    exec, uwsm app -- $HOME/.config/scripts/connect-xm6
-
-#/run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/connect-bluetooth 80:99:E7:E0:4B:A5 Sony XM6"
+bind = SUPER, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth-connect-xm6
 
 bind = SUPER, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = SUPER, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
