--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -1,9 +1,10 @@
 # This is an example Hyprland config file. Refer to the wiki for more information. https://wiki.hyprland.org/Configuring/
 
+# NOTE: commented and moved to nix, to see if it hyprland will take them
+
 # Set programs that you use
 source = ~/.cache/wal/colors-hyprland.conf
 
-source = ~/.config/hypr/modules/input.conf
 source = ~/.config/hypr/modules/windowrules.conf
 source = ~/.config/hypr/modules/permissions.conf
 source = ~/.config/hypr/modules/monitors.conf
@@ -16,15 +17,15 @@ source = ~/.config/hypr/hotkeys/resize.conf
 source = ~/.config/hypr/hotkeys/applications.conf
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-env = NVD_BACKEND,direct
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
-env = __GL_VRR_ALLOWED,0
-env = __GL_GSYNC_ALLOWED,0
-env = QT_QPA_PLATFORM,wayland;xcb
-env = LIBVA_DRIVER_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
-env = XDG_MENU_PREFIX,plasma-
+# env = NVD_BACKEND,direct
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = WLR_NO_HARDWARE_CURSORS,1
+# env = __GL_VRR_ALLOWED,0
+# env = __GL_GSYNC_ALLOWED,0
+# env = QT_QPA_PLATFORM,wayland;xcb
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = GBM_BACKEND,nvidia-drm
+# env = XDG_MENU_PREFIX,plasma-
 
 general { # https://wiki.hyprland.org/Configuring/Variables/#general
   gaps_in = 6
@@ -33,7 +34,7 @@ general { # https://wiki.hyprland.org/Configuring/Variables/#general
   border_size = 4
 
   # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-  col.active_border = $color6
+  col.active_border = rgba(03fcfcaa)
   col.inactive_border = rgba(595959aa)
 
   # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -44,6 +45,40 @@ general { # https://wiki.hyprland.org/Configuring/Variables/#general
 
   layout = dwindle
 }
+
+# https://wiki.hyprland.org/Configuring/Variables/#input
+input {
+  follow_mouse = 1
+  # float_switch_override_focus = 0
+	resolve_binds_by_sym = true
+
+  kb_model   = apple
+  kb_layout  = us,ru
+  kb_options = grp:win_space_toggle,ctrl:nocaps
+  # kb_variant =
+  # kb_model =
+  # kb_rules =
+
+  # debug:
+  # hyprctl -j devices | jq '.keyboards[] | {name,xkb_active_layout_name,xkb_layout_names}'
+
+  kb_options = ctrl:swapcaps,grp:win_space_toggle
+
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+  touchpad {
+    natural_scroll = false
+  }
+}
+
+# Example per-device config
+# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+
+# device {
+#   name = epic-mouse-v1
+#   sensitivity = -0.5
+# }
+
 
 decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
   rounding = 4
@@ -105,29 +140,34 @@ animations { # https://wiki.hyprland.org/Configuring/Variables/#animations
   animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
-dwindle { # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+dwindle {
   pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
   preserve_split = true # You probably want this
 }
 
-master { # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+master {
   new_status = master
 }
 
-misc { # https://wiki.hyprland.org/Configuring/Variables/#misc
-  # force_default_wallpaper = -1
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc {
+  # attempt to fix window moving
+  mouse_move_enables_dpms = false
   disable_hyprland_logo = true
-  mouse_move_enables_dpms = true
+  focus_on_activate = true
   vfr = true
   # vrr = 2
   vrr = 0
 }
 
 opengl {
- nvidia_anti_flicker = true
+#  nvidia_anti_flicker = true
 }
 
 xwayland {
   enabled = true
-  force_zero_scaling = true
+  force_zero_scaling = false
+  use_nearest_neighbor = false
 }
