Major hyprland Updates (hotkeys, everything is float)
* Utilize F1-F12. Music, Audio Control, suspend
* Binds for major hyprland features. Window position swap, move float
  windows, emulate full screen.
* Add more convienet switch between float windows and tile windows with
  custom scripts

--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -9,7 +9,7 @@ exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
 exec-once = pkill -x swww-daemon; swww-daemon & disown
 exec-once = kbuildsycoca6 # dolphin file association
 exec-once = kanshi reload
-exec-once = hypridle
+# exec-once = hypridle
 exec-once = $HOME/.config/scripts/mount-drives
 exec-once = $HOME/.config/waybar/live-reload
 
@@ -17,9 +17,10 @@ exec-once = $HOME/.config/waybar/live-reload
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
+# exec-once = $HOME/.local/bin/public/kitty-background-listener
+
 # Scripts
 exec-once = $HOME/.local/bin/public/tmux/nix-session
-exec-once = $HOME/.local/bin/public/kitty-background-listener
 exec-once = $HOME/.local/bin/public/tmux/local-session
 exec-once = $HOME/.local/bin/public/tmux/obsidian-session
 exec-once = $HOME/.local/bin/public/tmux/todo-session
@@ -27,11 +28,11 @@ exec-once = $HOME/.local/bin/private/tmux/openvpn-session
 # exec-once = uwsm app -- $HOME/.config/scripts/bluetooth-startup-connect
 
 # Applications
-exec-once = [workspace 1 silent] firefox -P default
 
 # echo $ZDOTDIR
 # echo $ZDOTDIR/.zshrc
 # if not zsh env ~/.config/zsh/zshrc is not loaded
+exec-once = [workspace 1 silent] firefox -P work
 exec-once = [workspace 2 silent] kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] kitty --class obsidian zsh -lic 'tmux attach-session -t obsidian; exec zsh'
 exec-once = [workspace 4 silent] kitty --class obsidian zsh -lic 'tmux attach-session -t todo; exec zsh'
@@ -41,3 +42,4 @@ exec-once = [workspace 5 silent] uwsm app -- dolphin
 # exec-once = [workspace 8 silent] pavucontrol
 # exec-once = [workspace 8 silent] blueman-manager
 exec-once = [workspace 10 silent] uwsm app -- firefox -P media
+exec-once = [workspace 10 silent] firefox -P default
